--- a/styles/nav-bar.css
+++ b/styles/nav-bar.css
@@ -4,16 +4,14 @@
 }
 
 .nav-bar {
-	width: 30vw;
-	max-width: 200px !important;
-	min-width: 125px !important;
-	height: 100vh !important;
-	min-height: 550px !important;
+	width: 14vw;
+	height: 100vh;
+	min-height: 550px;
 	
-	position: fixed !important;
-	top: 0 !important;
-	bottom: 0 !important;
-	left: 0 !important;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
 	
 	margin: 0;
 	padding: 0;
